--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nwozuzu-Victor Bliss | WDD 130</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Nwozuzu-Victor Bliss | WDD 130</h1>
+        <img src="images/profile.webp" alt="picture of Bliss" width="200">
+        <p>Hello world, my name is Bliss and i am the first child and son of my parents, i enjoy reading novels, listening to music and writing code </p>
+    </main>
+    <footer>
+        <p>&copy;2024 Bliss 😊✌Lagos, Nigeria</p>
+    </footer>
 </body>
 </html>
