--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Nwozuzu-Victor Bliss BYU Course project WDD 130">
+    <meta name="author" content="Nwozuzu-Victor Bliss">
     <title>Nwozuzu-Victor Bliss | WDD 130</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,6 +22,12 @@
         <img src="images/profile.webp" alt="picture of Bliss" width="200">
         <p>Hello world, my name is Bliss and i am the first child and son of my parents, i enjoy reading novels, listening to music and writing code </p>
     </main>
+
+    <aside>
+        <h2>Lagos</h2>
+        <img src="images/lagos.jpeg" alt="">
+        <p></p>
+    </aside>
     <footer>
         <p>&copy;2024 Bliss 😊✌Lagos, Nigeria</p>
     </footer>
