updated some files and added a new folder

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <img src="images/lagos.jpeg" alt="view of lagos state">
         <p>Lagos State, Nigeria's largest city, is a hub of culture, history, and innovation. It's home to Eko Atlantic, a futuristic city on reclaimed land, and Makoko. Lagos's vibrant culture includes Afrobeat, Nollywood, and bustling markets like Balogun. The city faces challenges like traffic but is exploring solutions like public transport and the Lagos light rail project. The Lagos Lagoon and Lekki Conservation Centre offer natural beauty amid urbanization. Known for its economic power, Lagos drives Nigeria’s economy through trade, banking, and tech. Festivals like Felabration and a diverse food scene celebrate the city's dynamic spirit, blending tradition with modernity.</p>
     </aside>
-    <footer>
-        <p>&copy;2024 Bliss 😊✌Lagos, Nigeria</p>
+    <footer >
+        <!-- <p>&copy;2024 Bliss 😊✌Lagos, Nigeria</p> -->
     </footer>
 </body>
 </html>
