--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Titillium+Web:ital,wght@0,200;0,300;0,600;0,700;1,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Titillium+Web:wght@200;300;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/rafting.css">
 
 </head>
 <body>
@@ -24,12 +25,31 @@
 
     <main>
         <div class="hero">
-            <img src="" alt="">
+            <img src="" alt="hero-background">
+            <h1>DRY OAR RAFTING CO.</h1>
+            <article>
+                <img src="" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum perferendis inventore nulla possimus et ullam voluptatem quaerat necessitatibus rem quam vero reiciendis, doloremque minus eveniet similique hic modi quisquam natus rerum enim suscipit impedit numquam error? Perferendis quod provident cumque sed dolores cum quisquam culpa blanditiis illo! Minima, excepturi nesciunt.</p>
+            </article>
         </div>
+
+        <section>
+            <h2>History</h2>
+            <p>dry oar raftind site is all about Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non est facilis eos reiciendis. Fugiat repudiandae odit magnam itaque, asperiores pariatur quisquam? Debitis quas sint, cumque distinctio et quisquam eaque?</p>
+        </section>
+
+        <section>
+            <h2>Adventure Awaits You!</h2>
+            <img src="images/rafting50_1024.jpg" alt="">
+            <img src="images/rafting47_600.jpg" alt="">
+            <img src="images/rafting12_1024.jpg" alt="">
+            <img src="images/rafting65_600.jpg" alt="">
+            <img src="images/rafting58_600.jpg" alt="">
+        </section>
     </main>
 
     <footer>
-
+        <p>&copy; 2024, Dry oar rafting co., Bliss Nwozuzu-Victor</p>
     </footer>
 </body>
 </html>
