--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,11 +25,11 @@
 
     <main>
         <div class="hero">
-            <img src="" alt="hero-background">
+            <img src="images/rafting58_600.jpg" alt="hero-background">
             <h1>DRY OAR RAFTING CO.</h1>
             <article>
-                <img src="" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum perferendis inventore nulla possimus et ullam voluptatem quaerat necessitatibus rem quam vero reiciendis, doloremque minus eveniet similique hic modi quisquam natus rerum enim suscipit impedit numquam error? Perferendis quod provident cumque sed dolores cum quisquam culpa blanditiis illo! Minima, excepturi nesciunt.</p>
+                <img src="images/rafting59_600.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum perferendis inventore nulla possimus et ullam voluptatem quaerat necessitatibus rem quam vero reiciendis, Perferendis quod provident cumque sed dolores cum quisquam culpa blanditiis illo! Minima, excepturi nesciunt.</p>
             </article>
         </div>
 
@@ -50,6 +50,19 @@
 
     <footer>
         <p>&copy; 2024, Dry oar rafting co., Bliss Nwozuzu-Victor</p>
+        <nav class="social-links">
+            <a href="https://facebook.com">
+                <img src="images/BW_Facebook_glyph_svg-64.webp" alt="">
+            </a>
+
+            <a href="https://youtube.com">
+                <img src="images/BW_Youtube_glyph_svg-64.webp" alt="">
+            </a>
+            <a href="https://x.com">
+                <img src="images/X-64.webp" alt="">
+            </a>
+            
+        </nav>
     </footer>
 </body>
 </html>
