--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,13 +38,14 @@
         <section class="section-history">
             <h2>History</h2>
             <div class="history-1">
-                <p>dry oar raftind site is all about Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum non est facilis eos reiciendis. Fugiat repudiandae odit magnam itaque, asperiores pariatur quisquam? Debitis quas sint, cumque dieleniti nostrum id non, obcaecati distinctio?</p>
-                <img src="images/gucci bag.png" alt="" width="200px">
+                <p>
+                    Whitewater rafting traces its roots back to the 1800s, when explorers first navigated wild rivers with rudimentary inflatable rafts. By the 1960s, rivers like the Colorado became popular for thrill-seekers, transforming rafting into a sport focused on adventure, discovery, and the beauty of uncharted waterways. This era saw significant advancements in rafting safety and equipment, enabling enthusiasts to tackle even the most challenging rapids, setting the stage for modern rafting companies to emerge.</p>
+                <img src="images/history1.jpeg" alt="history images" width="200px">
             </div>
             <div class="history-2">
-                 <img src="images/pngegg.png" alt="" width="200px">
+                 <img src="images/history2.jpeg" alt="history images" width="200px">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quod error autem enim laborum. Maiores deserunt, dolore dicta assumenda distinctio a, quas nemo rerum error accusantium sit rem amet veniam.
+                At Dryoar Rafting Co., we’re proud to carry on this legacy, offering safe, exhilarating rafting experiences for everyone from beginners to seasoned adventurers. Our experienced guides share a deep respect for the rivers we navigate and are committed to protecting these environments through sustainable practices. Join us as we blend history, adventure, and breathtaking landscapes for an unforgettable rafting experience!
               </p>
              
             </div>
@@ -56,23 +57,23 @@
            <section class="img-container">
            <figure>
             <img src="images/rafting50_1024.jpg" alt="">
-            <figcaption>rafting 1</figcaption>
+            <figcaption>Rafting group paddling rapids.</figcaption>
            </figure>
             <figure>
                 <img src="images/rafting47_600.jpg" alt="">
-                <figcaption>rafting 2</figcaption>
+                <figcaption>  rafting group  maneuvering </figcaption>
             </figure>
             <figure>
                 <img src="images/rafting12_1024.jpg" alt="">
-                <figcaption>rafting 3</figcaption>
+                <figcaption>Rafting team paddling together</figcaption>
             </figure>
             <figure>
                 <img src="images/rafting65_600.jpg" alt="">
-                <figcaption>rafting 4</figcaption>
+                <figcaption>Exicted rafting expeditions</figcaption>
             </figure>
             <figure>
                 <img src="images/rafting58_600.jpg" alt="">
-                <figcaption>rafting 5</figcaption>
+                <figcaption> Scenic river landscape</figcaption>
             </figure>
            </section>
         </section>
