--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,7 +21,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="Trips.html">Trips</a>
-            <a href="Contact.html">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
