--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="------------------------------------.">
+    <meta name="description" content="Get in touch with us at Dryoar rafting! Whether you have questions about our thrilling rafting adventures, want to book your next river experience, or need help planning your visit, our team is here to help. Reach out via phone, email, or fill out our contact form, and we’ll get back to you promptly. Dive into adventure with Rafting Haven – your gateway to unforgettable river rafting in Lagos!">
     <title>Contact Us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
