--- a/wwr/index.html
+++ b/wwr/index.html
@@ -26,7 +26,7 @@
 
     <main class="index-main" >
         
-            <img width="100%" src="images/rafting65_600_LE_auto_x4_light_ai.jpg" alt="">
+            <img width="100%" src="images/rafting65_600_LE_auto_x4_light_ai.webp" alt="">
             <h2>Experience Nature With Us.</h2>
             <h1>Dryoar Rafting Co.</h1>
             <a href="trips.html">Explore Our Exciting Rafting Trips!</a>
@@ -36,11 +36,11 @@
                     <input type="text" name="username" id="User">
                     <label for="mail">Email</label>
                     <input type="text" name="email" id="mail">
-                    <input type="submit" id="submit" value="Go!">
+                    <input type="submit"  autocomplete="email" id="submit" value="Go!">
                 </form>
             </div>
             <div class="box1">
-                <img src="images/rafting32_600.jpg" alt="group rafting together">
+                <img src="images/rafting32_600.webp" alt="group rafting together">
                 <p>
                     At Dryoar Rafting, we believe adventure is best experienced on the water. With trained guides, top-notch equipment, and a passion for outdoor thrills, we offer rafting experiences suitable for everyone. From beginners seeking a new experience to adrenaline junkies looking for a rush, we’ve got a trip for you!
                 </p>
