--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -24,40 +24,40 @@
         </nav>
     </header>
 
-    <main class="index-main" >
-        
-            <img width="100%" src="images/rafting65_600_LE_auto_x4_light_ai.jpg" alt="">
-            <h2>Experience Nature With Us.</h2>
-            <h1>Dryoar Rafting Co.</h1>
-            <a href="trips.html">Explore Our Exciting Rafting Trips!</a>
-            <div class="form-box">
-                <form class="initial-form">
-                    <label for="User">Username</label>
-                    <input type="text" name="username" id="User">
-                    <label for="mail">Email</label>
-                    <input type="text" name="email" id="mail">
-                    <input type="submit" id="submit" value="Go!">
-                </form>
+    <main>
+        <section class="hero">
+            <img src="images/river-evening-wide.jpg" alt="Rafting on a river">
+            <div class="trip-article">
+                <h2>Experience the Thrill of Rafting</h2>
+                <p>Join us for an unforgettable rafting adventure!</p>
+                <a href="#trips" class="trips-button">View Trips</a>
             </div>
-            <div class="box1">
-                <img src="images/rafting32_600.jpg" alt="group rafting together">
-                <p>
-                    At Dryoar Rafting, we believe adventure is best experienced on the water. With trained guides, top-notch equipment, and a passion for outdoor thrills, we offer rafting experiences suitable for everyone. From beginners seeking a new experience to adrenaline junkies looking for a rush, we’ve got a trip for you!
-                </p>
-            </div>
-            <div class="box2">
-                <img src="images/rafting58_600.jpg" alt="calm rafting waterways">
-                Eco-Friendly Scenic Floats
+        </section>
+        <section id="trips" class="trips">
+            <h2>Our Rafting Trips</h2>
+            <div class="trip-container">
+                <div class="trip">
+                    <img src="images/rafting32_600.webp" alt="Rafting trip 1">
+                    <h3>Rapid Rush Adventure</h3>
+                    <p>Perfect for thrill-seekers, this half-day trip takes you through the most intense rapids on the river. Tackle Class III and IV rapids with experienced guides who ensure your safety as you plunge through waves, drops, and fast-moving water. This adventure guarantees an adrenaline-packed experience for those looking to challenge themselves.</p>
+                    <a href="trip-details.html" class="button">Learn More</a>
+                </div>
+                <div class="trip">
+                    <img src="images/rafting47_600.jpg" alt="Rafting trip 2">
+                    <h3>Full-Day Rapids Challenge</h3>
+                    <p>Ready for a full day of adventure? This trip covers a long stretch of the river with both challenging rapids and relaxing sections for a balanced experience. Enjoy a riverside lunch and moments to swim in quieter spots. The Full-Day Rapids Challenge is ideal for intermediate to experienced rafters looking for an all-encompassing river journey.</p>
+                    <a href="trip-details.html" class="button">Learn More</a>
+                </div>
+                <div class="trip">
+                    <img src="images/rafting50_1024.webp" class="trip3-img" alt="Rafting trip 3">
+                    <h3>Wilderness Expedition</h3>
+                    <p>For the ultimate adventure, embark on a multi-day rafting trip through untouched wilderness. Spend nights camping along the river, with meals provided and stunning scenery all around. Encounter challenging rapids, explore hidden coves, and immerse yourself in nature. This trip is designed for true outdoor enthusiasts and offers an unforgettable experience in the wild.
 
-                If you prefer a calm and scenic river journey, our float trips allow you to soak in the natural beauty without the rush. Perfect for families, photographers, and nature lovers, these trips provide a relaxing experience on tranquil sections of the river
+                    </p>
+                    <a href="trip-details.html" class="button">Learn More</a>
+                </div>
             </div>
-            <div class="box3">
-                <img src="images/download (2).jpeg" alt="Safety gear for rafting">
-                Safety and Training Programs
-
-                Safety is our top priority, and we provide comprehensive training before every trip. Our certified guides conduct safety briefings, provide life jackets and helmets, and ensure everyone is prepared for the journey. We also offer specialized training programs for beginners and those interested in learning advanced rafting skills.
-            </div>
-
+        </section>
     </main>
 
     <footer>
