--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -43,7 +43,7 @@
                     <a href="trip-details.html" class="button">Learn More</a>
                 </div>
                 <div class="trip">
-                    <img src="images/rafting47_600.jpg" alt="Rafting trip 2">
+                    <img src="images/rafting47_600.webp" alt="Rafting trip 2">
                     <h3>Full-Day Rapids Challenge</h3>
                     <p>Ready for a full day of adventure? This trip covers a long stretch of the river with both challenging rapids and relaxing sections for a balanced experience. Enjoy a riverside lunch and moments to swim in quieter spots. The Full-Day Rapids Challenge is ideal for intermediate to experienced rafters looking for an all-encompassing river journey.</p>
                     <a href="trip-details.html" class="button">Learn More</a>
